--- a/src/_light_mode_variables.scss
+++ b/src/_light_mode_variables.scss
@@ -8,7 +8,7 @@
 
 // colors
 $primary: #00246B;
-$secondary: #ababab;
+$secondary: #ffffff;
 $tetiary: #000;
 $thick-blue:#2e4ead;
 
@@ -17,7 +17,7 @@ $padding: 30px;
 $border-radius:0 15px 15px 0;
 
 // navbar
-$nav-active-btn-bg: #3f3f3f;
+$nav-active-btn-bg: #000;
 $nav-active-btn-text-color: #fff;
 
 // buttons
@@ -36,7 +36,7 @@ $form-padding: 20px;
 // List items
 $list-border-radius:10px;
 $list-padding:20px;
-$list-box-shadow:1px 1px 5px #313131, -1px -1px 5px #313131;
+$list-box-shadow:1px 1px 5px #898989, -1px -1px 5px #ffffff;
 
 // table style
-$tbl-bg: #ababab;
+$tbl-bg: #fff;
