--- a/src/css/components/background.css
+++ b/src/css/components/background.css
@@ -1,5 +1,5 @@
 .subdomain-list {
-  background: #3f3f3f;
+  background: #ffffff;
   border-radius: 20px;
   padding: 40px;
   backdrop-filter: blur(10px);
@@ -26,12 +26,12 @@
   position: absolute;
   z-index: 1;
   background-color: #00246B;
-  border: 2px solid #CADCFC;
+  border: 2px solid #ffffff;
   border-radius: 0px 15px 15px 15px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 .dropdown-content a {
-  color: #CADCFC;
+  color: #ffffff;
   padding: 8px 10px;
   text-decoration: none;
   display: block;
