--- a/src/login.scss
+++ b/src/login.scss
@@ -1,43 +1,79 @@
+// @import '_variables.scss';
+// @import '_buttons.scss';
+// @import '_inputs.scss';
+
+// .login-bg{
+//     border-radius: $form-border-radius;
+//     box-shadow: $form-box-shadow;
+//     background-color: $form-background;
+//     padding: $form-padding + 20;
+//     width: 40%;
+//     height: 80%;
+// }
+
+// .login-btn{
+//     background-color: $btn-color;
+// }
+
+// /* Extra small devices (phones, 320px and up) */
+// @media (min-width: 320px) {
+//     /* Styles for small phones */
+//     .login-bg{
+//         height: 100%;
+//     }
+// }
+
+// /* Small devices (phones, 375px and up) */
+// @media (min-width: 375px) {
+//     /* Styles for regular phones */
+// }
+
+// /* Tablets and medium screens (768px and up) */
+// @media (min-width: 768px) {
+//     /* Styles for tablets */
+// }
+
+// /* Large devices (desktops, 1200px and up) */
+// @media (min-width: 1200px) {
+//     /* Styles for larger screens */
+//     .login-bg{
+//         height: 60%;
+//     }
+// }
+
+
 @import '_variables.scss';
 @import '_buttons.scss';
 @import '_inputs.scss';
 
-.login-bg{
+.login-bg {
     border-radius: $form-border-radius;
     box-shadow: $form-box-shadow;
     background-color: $form-background;
-    padding: $form-padding + 20;
-    width: 40%;
-    height: 80%;
+    padding: $form-padding;
+    width: 90%;
+    // max-width: 400px;
+    height: auto; // Default height for smaller screens
+
+    @media (min-width: 768px) {
+        width: 60%;
+    }
+
+    @media (min-width: 1200px) {
+        width: 40%;
+        padding: $form-padding + 20;
+    }
 }
 
-.login-btn{
+.login-btn {
     background-color: $btn-color;
 }
 
-/* Extra small devices (phones, 320px and up) */
-@media (min-width: 320px) {
-    /* Styles for small phones */
-    .login-bg{
-        height: 100%;
-    }
+.main-input {
+    margin-top: 10px;
+    padding: 10px;
 }
 
-/* Small devices (phones, 375px and up) */
-@media (min-width: 375px) {
-    /* Styles for regular phones */
+.d-grid {
+    margin-top: 20px;
 }
-
-/* Tablets and medium screens (768px and up) */
-@media (min-width: 768px) {
-    /* Styles for tablets */
-}
-
-/* Large devices (desktops, 1200px and up) */
-@media (min-width: 1200px) {
-    /* Styles for larger screens */
-    .login-bg{
-        height: 60%;
-    }
-}
-
