--- a/src/_light_mode_variables.scss
+++ b/src/_light_mode_variables.scss
@@ -7,8 +7,8 @@
 
 
 // colors
-$primary: #00246B;
-$secondary: #ffffff;
+$primary: #DEE3DD;
+$secondary: #000;
 $tetiary: #000;
 $thick-blue:#2e4ead;
 
