--- a/src/components/background.scss
+++ b/src/components/background.scss
@@ -2,7 +2,7 @@
 
 .subdomain-list {
     // background: rgb(245, 245, 245);
-    background: $secondary;
+    background: #fff;
     border-radius: 20px;
     padding: 40px;
     backdrop-filter: blur(10px);
