--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap");
 html {
   min-height: 100vh;
-  background-color: #00246B;
+  background-color: #DEE3DD;
 }
 html body {
   font-family: "Signika Negative", sans-serif !important;
@@ -17,7 +17,7 @@ html body {
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
-  background-color: #00246B;
+  background-color: #DEE3DD;
   height: 100%;
 }
 .wrapper .main_container {
@@ -39,7 +39,7 @@ html body {
   z-index: 10;
 }
 .wrapper .outer-sidebar, .wrapper .sidebar {
-  background: #00246B;
+  background: #DEE3DD;
   width: 200px;
   border-bottom-left-radius: 20px;
   transition: all 0.3s ease;
@@ -50,7 +50,7 @@ html body {
   color: #fff;
   position: relative;
   margin-bottom: 1px;
-  color: #ffffff;
+  color: #000;
   white-space: nowrap;
   cursor: pointer;
   text-decoration: none;
@@ -80,7 +80,7 @@ html body {
   left: 0;
   width: 3px;
   height: 100%;
-  background: #ffffff;
+  background: #000;
   display: none;
 }
 .wrapper .top_navbar {
@@ -93,7 +93,7 @@ html body {
 .wrapper .top_navbar .top_menu {
   width: calc(100% - 70px);
   height: 100%;
-  background: #00246B;
+  background: #DEE3DD;
   border-top-right-radius: 20px;
   display: flex;
   justify-content: flex-end;
@@ -117,9 +117,9 @@ html body {
   height: 35px;
   line-height: 35px;
   text-align: center;
-  border: 1px solid #ffffff;
+  border: 1px solid #000;
   border-radius: 50%;
-  color: #00246B;
+  color: #DEE3DD;
 }
 .wrapper .top_navbar .top_menu ul li a:hover {
   background: #000;
@@ -131,7 +131,7 @@ html body {
 .wrapper .top_navbar .hamburger {
   width: 70px;
   height: 100%;
-  background: #00246B;
+  background: #DEE3DD;
   padding: 15px 17px;
   border-top-left-radius: 20px;
   cursor: pointer;
@@ -139,7 +139,7 @@ html body {
 .wrapper .top_navbar .hamburger div {
   width: 35px;
   height: 4px;
-  background: #ffffff;
+  background: #000;
   margin: 5px 0;
   border-radius: 5px;
 }
